<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="fragment"
            type="io.tokend.certificates.feature.home.view.HomePageFragment" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:background="@color/background_primary"
        android:layout_height="match_parent">

        <include
            isVisible="@{fragment.isLoading()}"
            layout="@layout/layout_loader" />

    <androidx.constraintlayout.widget.ConstraintLayout
        isVisible="@{!fragment.isLoading()}"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            style="@style/Theme.Certificates.TextHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/select_scan_option"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView2"
            style="@style/Theme.Certificates.TextSecondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/scan_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/scan_camera"
            android:layout_width="0dp"
            android:layout_height="132dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/camera_image"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/ic_camera"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Theme.Certificates.TextHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/using_camera"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/camera_image"
                    app:layout_constraintStart_toStartOf="@+id/camera_image"
                    app:layout_constraintTop_toBottomOf="@+id/camera_image" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/scan_image"
            android:layout_width="0dp"
            android:layout_height="132dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scan_camera">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/ic_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Theme.Certificates.TextHeader"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/upload_image"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>