<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    <variable
        name="certificate"
        type="io.tokend.certificates.feature.verify.model.CertificateData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_primary"
        tools:context=".feature.info.view.InfoFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/accent_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:background="@null"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/Theme.Certificates.TextHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/qr_code"
                android:textColor="@color/text_invert"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/back_button"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Theme.Certificates.TextTertiary.HighLight"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/message" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/message_textView"
                        style="@style/Theme.Certificates.TextTertiary"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@{certificate.message}" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="24dp"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Theme.Certificates.TextTertiary.HighLight"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/address" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/address_textView"
                        style="@style/Theme.Certificates.TextTertiary"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@{certificate.address}" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Theme.Certificates.TextTertiary.HighLight"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/signature" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/signature_textView"
                        style="@style/Theme.Certificates.TextTertiary"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@{certificate.signature}" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="24dp"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Theme.Certificates.TextTertiary.HighLight"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/certificate_page" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/link_textView"
                        style="@style/Theme.Certificates.TextTertiary"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@{certificate.certificatePage}" />
                </androidx.appcompat.widget.LinearLayoutCompat>


                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:id="@+id/date_textView"
                    style="@style/Theme.Certificates.TextSecondary"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:background="@color/background_secondary"
                    android:padding="16dp"
                    tools:text="15.09.2023" />

                <com.google.android.material.card.MaterialCardView
                    style="@style/Theme.Certificates.CardView.Light"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/appCompatImageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_copy"
                            android:layout_marginStart="16dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/Theme.Certificates.TextSecondary.HighLight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:text="@string/copy_text"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    style="@style/Theme.Certificates.CardView.Light"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/appCompatImageView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:src="@drawable/ic_share"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/Theme.Certificates.TextSecondary.HighLight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:text="@string/share"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/appCompatImageView3"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>